--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "gloudemans/shoppingcart": "^2.6",
+        "hardevine/shoppingcart": "2.6.2.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
     },
@@ -33,6 +34,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
