--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "consoletvs/charts": "5.*",
         "fideloper/proxy": "^4.0",
         "gloudemans/shoppingcart": "^2.6",
         "hardevine/shoppingcart": "2.6.2.1",
