--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "require": {
         "php": "^7.1.3",
         "consoletvs/charts": "5.*",
+        "dmitry-ivanov/dark-sky-api": "^1.0",
         "fideloper/proxy": "^4.0",
         "gloudemans/shoppingcart": "^2.6",
         "hardevine/shoppingcart": "2.6.2.1",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "naughtonium/laravel-dark-sky": "^1.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
