--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-snappy": "^0.4.4",
         "consoletvs/charts": "5.*",
         "dmitry-ivanov/dark-sky-api": "^1.0",
         "fideloper/proxy": "^4.0",
         "gloudemans/shoppingcart": "^2.6",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "hardevine/shoppingcart": "2.6.2.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
