--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "hardevine/shoppingcart": "2.6.2.1",
         "laravel/framework": "5.7.*",
+        "laravel/telescope": "~1.0",
         "laravel/tinker": "^1.0",
         "naughtonium/laravel-dark-sky": "^1.2"
     },
