--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fideloper/proxy": "^4.0",
         "gloudemans/shoppingcart": "^2.6",
         "gmopx/laravel-owm": "^0.1.3",
+        "guzzlehttp/guzzle": "^6.3",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "hardevine/shoppingcart": "2.6.2.1",
